# textbased

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
textbased/: __init__.py  constants.py  decor.py  game.py  retro.py  screen.py
textbased/decor/: __init__.py
textbased/game/: __init__.py
textbased/retro/: __init__.py  print.py
